# eft_parser

./: .gitignore  LICENSE  README.md  parse_fits.py  pyproject.toml
data/: sde_lite.sqlite
src/eft_parser/: __init__.py  parse_fits.py
src/eft_parser/utils/: db_handler.py
test_files/: PVPHurricane.txt  T1AbyssalCaracal_eft2.txt
tests/: __init__.py  test_fit.txt  test_fit.yaml  test_fit1.json  test_fit2.txt  test_fit3.txt  test_parse_fits.py
