[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eft-parser"
version = "0.1.0"
authors = [
    { name = "OrthelToralen", email = "Orthel.Toralen@gmail.com" },
]
description = "A Python library for parsing and converting EVE Online ship fittings between different formats (EFT, JSON, and YAML)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest>=8.3.5",
    "pyyaml>=6.0",
]

[project.urls]
"Homepage" = "https://github.com/OrthelToralen/eft_parser"
"Bug Tracker" = "https://github.com/OrthelToralen/eft_parser/issues"
